# crowdparser

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  pyproject.toml  setup.cfg
configs/: pltest-consul.yaml
src/crowdparser/: __init__.py  cli.py  config.py  dedup.py  models.py  pipeline.py
src/crowdparser/extractors/: llm.py
src/crowdparser/output/: __init__.py  json_file.py  webhook.py
src/crowdparser/sources/: __init__.py  base.py  reddit.py  telegram.py  web.py  youtube.py
