[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowdparser"
version = "0.1.0"
description = "Crowdsourced content harvester — extract structured candidates from YouTube, Telegram, Reddit, and web sources"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "click>=8.1",
    "youtube-transcript-api>=0.6",
    "telethon>=1.36",
    "praw>=7.7",
    "anthropic>=0.25",
    "tenacity>=8.2",
    "rich>=13.7",
    "aiofiles>=23.2",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
crowdparser = "crowdparser.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
